syntax = "proto3";

import "github.com/15mga/kiwi_tool/kiwi.proto";

package pb;
option go_package = "/pb";
option csharp_namespace = "Pb";
option (kiwi.svc) = {
  name:"gate",
  id: 1,
  worker: {
    mode: Self,
    origin: Head,
    key: "addr",
  }
};

message GateBanAddrReq {
  option (kiwi.code) = 500;
  string addr = 1;
}

message GateBanAddrRes {
  option (kiwi.code) = 501;
}

message GateSendToIdReq {
  option (kiwi.code) = 502;
  string id = 1;
  uint32 svcCode = 2;
  bytes payload = 3;
}

message GateSendToIdRes {
  option (kiwi.code) = 503;
}

message GateSendToAddrReq {
  option (kiwi.code) = 504;
  string addr = 1;
  uint32 svcCode = 2;
  bytes payload = 3;
}

message GateSendToAddrRes {
  option (kiwi.code) = 505;
}

message GateSendToMultiIdReq {
  option (kiwi.code) = 506;
  bytes payload = 1;
}

message GateSendToMultiIdRes {
  option (kiwi.code) = 507;
  map<string, bool> result = 1;
}

message GateSendToMultiAddrReq {
  option (kiwi.code) = 508;
  bytes payload = 1;
}

message GateSendToMultiAddrRes {
  option (kiwi.code) = 509;
  map<string, bool> result = 1;
}

message GateSendToAllReq {
  option (kiwi.code) = 510;
  uint32 svcCode = 1;
  bytes payload = 2;
}

message GateSendToAllRes {
  option (kiwi.code) = 511;
}

message GateCloseIdReq {
  option (kiwi.code) = 512;
  string id = 1;
}

message GateCloseIdRes {
  option (kiwi.code) = 513;
}

message GateCloseAddrReq {
  option (kiwi.code) = 514;
  string addr = 1;
}

message GateCloseAddrRes {
  option (kiwi.code) = 515;
}

message GateUpdateReq {
  option (kiwi.code) = 516;
  string id = 1;
  bytes head = 2;
}

message GateUpdateRes {
  option (kiwi.code) = 517;
}

message GateAddrUpdateReq {
  option (kiwi.code) = 518;
  string addr = 1;
  bytes head = 2;
}

message GateAddrUpdateRes {
  option (kiwi.code) = 519;
}

message GateRemoveReq {
  option (kiwi.code) = 520;
  string id = 1;
  repeated string head = 2;
}

message GateRemoveRes {
  option (kiwi.code) = 521;
}

message GateAddrRemoveReq {
  option (kiwi.code) = 522;
  string addr = 1;
  repeated string head = 2;
}

message GateAddrRemoveRes {
  option (kiwi.code) = 523;
}

message GateGetReq {
  option (kiwi.code) = 524;
  string id = 1;
  bool close = 2; //关闭重复链接
}

message GateGetRes {
  option (kiwi.code) = 525;
  bytes head = 1;
}

message GateAddrGetReq {
  option (kiwi.code) = 526;
  string addr = 1;
  bool close = 2; //关闭重复链接
}

message GateAddrGetRes {
  option (kiwi.code) = 527;
  bytes head = 1;
}